NLP TP's/texts/robotics/robotics.stackexchange_0000067746.txt
Q:

Writing a simple CMakeLists.txt file for ROS

I am new to ROS (Indigo), and I want to write a C++ program to use the MoveIt! package.
However, I am confused as to what I need to have in my CMakeLists.txt file, such that the header and library files can be found.
For example, here is the file so far:
cmake_minimum_required(VERSION 2.8.1)

project(MicoMoveIt)

set(CMAKE_CXX_FLAGS "-std=c++11")

file(GLOB srcs *.cpp)

include_directories(/opt/ros/indigo/include)

link_directories(/opt/ros/indigo/lib)

add_executable(${PROJECT_NAME} ${srcs})

And my main.cpp file is:
#include <ros/ros.h>
#include <moveit/move_group_interface/move_group.h>

int main()
{
    moveit::planning_interface::MoveGroup group("right_arm");
    return 0;
}

But compiling this gives me the error:
/opt/ros/indigo/include/moveit/robot_model/joint_model.h:47: error: Eigen/Geometry: No such file or directory
 #include <Eigen/Geometry>
                          ^

So, I need to specify where to find these Eigen header files. But given that Eigen is a dependency of MoveIt!, then I shouldn't have to manually include all these header file directories.
How should I be writing the CMakeLists.txt file so that all header and library directories of dependencies are included?

Originally posted by Karnivaurus on ROS Answers with karma: 133 on 2015-05-25
Post score: 2

Original comments
Comment by gvdhoorn on 2016-01-14:
Did you review the extensive documentation on CMakeLists.txt and catkin and the catkin docs?

A:

For what it's worth,
Could you try to install these packages:
ros-indigo-eigen-utils, ros-indigo-eigen-conversions
I'm using currently groovy and I don't have any experiences with indigo, but did you follow this tutorial ?
http://wiki.ros.org/ROS/Tutorials/CreatingPackage
I would suggest you to follow all the tutorials for the beginner before writing any code.
http://wiki.ros.org/ROS/Tutorials

Originally posted by Fleurmond with karma: 46 on 2015-05-26
This answer was ACCEPTED on the original site
Post score: 0

